--- a/client/view/testQQ/index.html
+++ b/client/view/testQQ/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>React-Nodejs-Learn</title>
+    <title>test your QQ number</title>
 </head>
 <body>
-    <div id="main-container">哇哈哈</div>
+    <div id="test-qq"></div>
+    <script src="../client/static/output/js/view/testQQ/index.bundle.js"></script>
 </body>
 </html>
