--- a/client/view/index.html
+++ b/client/view/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>React-Nodejs-Learn</title>
+    <title>What JB</title>
 </head>
 <body>
     <div id="main-container">
