modify file structure

--- a/client/view/index.html
+++ b/client/view/index.html
@@ -11,6 +11,6 @@
       </br>
       <a href="./constellation">Test your constellation</a>
     </div>
-    <script src="../client/static/output/js/view/main/index.bundle.js"></script>
+    <!-- <script src="../client/static/output/js/view/main/index.bundle.js"></script> -->
 </body>
 </html>
