--- a/client/view/index.html
+++ b/client/view/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <div id="main-container">
-      <h2>Hello {{name}}<h2>
+      <h2>Hello Jb<h2>
       <a href="./qq">Test your QQ number</a>
       </br>
-      <a href="./constellation">Test your constellation</a>
+      <!-- <a href="./constellation">Test your constellation</a> -->
     </div>
     <!-- <script src="../client/static/output/js/view/main/index.bundle.js"></script> -->
 </body>
