add team home page

--- a/client/view/index.html
+++ b/client/view/index.html
@@ -10,6 +10,8 @@
       <a href="./qq">Test your QQ number</a>
       </br>
       <a href="./constellation">Test your constellation</a>
+      </br>
+      <a href="./teamweb">teamweb home page</a>
     </div>
     <!-- <script src="../client/static/output/js/view/main/index.bundle.js"></script> -->
 </body>
